API: get current user's stats, bulkadd; fix erorr handling
