# server/impl.go
@@ -9,11 +9,11 @@ import (
 	"time"
 
 	"github.com/42LoCo42/emo/api"
+	"github.com/42LoCo42/emo/shared"
 	"github.com/asdine/storm/v3"
 	"github.com/golang-jwt/jwt/v5"
 	"github.com/jamesruan/sodium"
 	"github.com/labstack/echo/v4"
-	"github.com/pkg/errors"
 )
 
 const SONGFILE_BUCKET = "songfiles"
@@ -45,7 +45,7 @@ func (s *Server) GetLoginUser(ctx echo.Context, name string) error {
 
 	signed, err := token.SignedString(s.jwtKey)
 	if err != nil {
-		return errors.Wrap(err, "could not sign token")
+		return shared.Wrap(err, "could not sign token")
 	}
 
 	return ctx.String(http.StatusOK, base64.StdEncoding.EncodeToString(
@@ -57,7 +57,7 @@ func (s *Server) GetLoginUser(ctx echo.Context, name string) error {
 func (s *Server) DeleteSongsName(ctx echo.Context, name string) error {
 	tx, err := s.db.Begin(true)
 	if err != nil {
-		return errors.Wrap(err, "could not create transaction")
+		return shared.Wrap(err, "could not create transaction")
 	}
 	defer tx.Rollback()
 
@@ -133,6 +133,15 @@ func (s *Server) GetStatsId(ctx echo.Context, id uint64) error {
 	return ctx.JSON(http.StatusOK, stat)
 }
 
+func (s *Server) GetStatsUser(ctx echo.Context) error {
+	var stats []api.Stat
+	if err := s.db.Find("User", ctx.Get("user"), &stats); err != nil {
+		return err
+	}
+
+	return ctx.JSON(http.StatusOK, stats)
+}
+
 // GetStatsSongSong implements api.ServerInterface
 func (s *Server) GetStatsSongSong(ctx echo.Context, song string) error {
 	var stats []api.Stat
@@ -175,13 +184,13 @@ func (s *Server) GetUsersName(ctx echo.Context, name string) error {
 func (s *Server) PostSongs(ctx echo.Context) error {
 	tx, err := s.db.Begin(true)
 	if err != nil {
-		return errors.Wrap(err, "could not start transaction")
+		return shared.Wrap(err, "could not start transaction")
 	}
 	defer tx.Rollback()
 
 	form, err := ctx.MultipartForm()
 	if err != nil {
-		return errors.Wrap(err, "could not get multipart form")
+		return shared.Wrap(err, "could not get multipart form")
 	}
 
 	infos := form.Value["Info"]
@@ -191,27 +200,27 @@ func (s *Server) PostSongs(ctx echo.Context) error {
 
 	var info api.SongInfo
 	if err := json.NewDecoder(strings.NewReader(infos[0])).Decode(&info); err != nil {
-		return errors.Wrap(err, "could not decode song info")
+		return shared.Wrap(err, "could not decode song info")
 	}
 
 	if err := tx.Save(&info); err != nil {
-		return errors.Wrap(err, "could not save song info")
+		return shared.Wrap(err, "could not save song info")
 	}
 
 	files := form.File["File"]
 	if len(files) == 1 {
 		file, err := files[0].Open()
 		if err != nil {
-			return errors.Wrap(err, "could not open song file")
+			return shared.Wrap(err, "could not open song file")
 		}
 
 		buf := make([]byte, files[0].Size)
 		if _, err := file.Read(buf); err != nil {
-			return errors.Wrap(err, "could not read song file")
+			return shared.Wrap(err, "could not read song file")
 		}
 
 		if err := tx.Set(SONGFILE_BUCKET, info.Name, buf); err != nil {
-			return errors.Wrap(err, "could not save song file")
+			return shared.Wrap(err, "could not save song file")
 		}
 	}
 
@@ -222,25 +231,59 @@ func (s *Server) PostSongs(ctx echo.Context) error {
 func (s *Server) PostStats(ctx echo.Context) error {
 	var stat api.Stat
 	if err := json.NewDecoder(ctx.Request().Body).Decode(&stat); err != nil {
-		return errors.Wrap(err, "could not decode stat")
+		return shared.Wrap(err, "could not decode stat")
 	}
 
 	if err := s.db.Save(&stat); err != nil {
-		return errors.Wrap(err, "could not save stat")
+		return shared.Wrap(err, "could not save stat")
 	}
 
 	return ctx.NoContent(http.StatusOK)
+}
+
+// PostStatsBulkadd implements api.ServerInterface
+func (s *Server) PostStatsBulkadd(ctx echo.Context) error {
+	tx, err := s.db.Begin(true)
+	if err != nil {
+		return shared.Wrap(err, "could not begin transaction")
+	}
+	defer tx.Rollback()
+
+	var stats []api.Stat
+	if err := json.NewDecoder(ctx.Request().Body).Decode(&stats); err != nil {
+		return shared.Wrap(err, "could not decode stats")
+	}
+
+	for _, stat := range stats {
+		var realStat api.Stat
+		if err := tx.One("ID", stat.ID, &realStat); err != nil {
+			if err == storm.ErrNotFound {
+				log.Printf("Stat with ID %d not found!", stat.ID)
+			} else {
+				return shared.Wrap(err, "could not get stat")
+			}
+		}
+
+		realStat.Count += stat.Count
+		realStat.Boost += stat.Boost
+
+		if err := tx.Save(&realStat); err != nil {
+			return shared.Wrap(err, "could not save stat")
+		}
+	}
+
+	return tx.Commit()
 }
 
 // PostUsers implements api.ServerInterface
 func (s *Server) PostUsers(ctx echo.Context) error {
 	var user api.User
 	if err := json.NewDecoder(ctx.Request().Body).Decode(&user); err != nil {
-		return errors.Wrap(err, "could not decode body")
+		return shared.Wrap(err, "could not decode body")
 	}
 
 	if err := s.db.Save(&user); err != nil {
-		return errors.Wrap(err, "could not save user")
+		return shared.Wrap(err, "could not save user")
 	}
 
 	log.Printf("User %s updated", user.Name)
